--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,7 +174,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_margin="10dp"
-                        android:src="@drawable/menu" />
+                        android:src="@drawable/Food" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -328,13 +328,13 @@
             android:layout_marginEnd="16dp"
             android:background="@android:color/transparent"
             app:elevation="0dp"
-            app:menu="@menu/bottom_nav_menu"
+            app:Food="@Food/bottom_nav_Food"
 
             />
 
     </com.google.android.material.bottomappbar.BottomAppBar>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.doubleingactionbutton.doubleingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
